--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	},
 	"dependencies": {
 		"html-loader": "^0.5.1",
-		"liquid-node": "^3.0",
+		"liquid": "^5.0",
 		"loader-utils": "^1.0.2",
 		"object-assign": "^4.1.0"
 	}
