--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 	},
 	"dependencies": {
 		"html-loader": "^0.5.1",
-		"liquid": "^5.0",
 		"loader-utils": "^1.0.2",
 		"object-assign": "^4.1.0"
+	},
+	"devDependencies": {
+		"liquid": "git+https://github.com/Faraday-Labs-Inc/liquid.git"
 	}
 }
